<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".views.elements.TextCardMain">

    <androidx.cardview.widget.CardView
        style="@style/TextCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/cardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big">

                <TextView
                    android:id="@+id/cardName"
                    android:text="@string/card_text_name"
                    style="@style/CardNameText" />
                <TextView
                    android:id="@+id/cardDescription"
                    style="@style/CardDescriptionText"
                    android:text="@string/fish"
                    />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/CardCover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover_card"
                    android:src="@drawable/bends" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_big"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <androidx.cardview.widget.CardView
                    style="@style/TextBubbleCard">

                    <TextView
                        android:id="@+id/cardMainText"
                        style="@style/TextBubbleText"
                        android:text="@string/fish" />

                </androidx.cardview.widget.CardView>
                <Space
                    android:layout_width="11dp"
                    android:layout_height="match_parent"/>

                <androidx.cardview.widget.CardView
                    style="@style/CardButtons">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="@dimen/button_size_w"
                            android:background="@color/button_background"
                            android:layout_height="@dimen/inner_button_size"
                            android:src="@drawable/book" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="2dp"/>

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="@dimen/button_size_w"
                            android:background="@color/button_background"
                            android:layout_height="@dimen/inner_button_size"
                            android:src="@drawable/archive_book" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>