<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/block_size"
    android:layout_height="@dimen/block_size"
    tools:context=".views.elements.MediaCardMainFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/radius_card"
        app:cardBackgroundColor="@color/card_music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/cardText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/wave"
                    android:gravity="center"
                    android:layout_width="@dimen/cover_size_big"
                    android:layout_height="25dp"
                    android:text="@string/card_music_wave"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/cardDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_block_h"
                    android:text="@string/wave_description"
                    android:textColor="@color/description_text"
                    android:textSize="@dimen/text_size_description"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                app:cardCornerRadius="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/playBtn"
                    android:layout_width="@dimen/play_btn_size"
                    android:background="@color/button_background"
                    android:layout_height="@dimen/play_btn_size"
                    android:src="@drawable/play_icon" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/choosedSettings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintBottom_toTopOf="@id/settingsBtn"
                app:layout_constraintTop_toBottomOf="@id/cardText"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choosedSettings"
                app:cardElevation="0dp">

                <Button
                    android:layout_width="@dimen/wave_settings_btn_w"
                    android:layout_height="@dimen/wave_settings_btn_h"
                    android:paddingHorizontal="1dp"
                    android:text="@string/wave_settings_name" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>