<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainScreen"
    tools:context=".views.pages.SearchPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/historyCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_default"
            app:cardBackgroundColor="@color/card_history"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/radius_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_big" />

                <Button
                    android:id="@+id/clearHistoryBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/clear_history_btn"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_default"
            app:cardBackgroundColor="@color/card_main"
            app:cardCornerRadius="@dimen/radius_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/media_icons"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_default"
                    android:autofillHints="name"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:textSize="@dimen/text_size_extra_big"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/clearBtn"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/clearBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/clear_text_btn"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/editTextText"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/emptySearchCard"
            android:name="ru.surok.clientserverappproject.views.elements.EmptySearchFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            tools:layout="@layout/fragment_empty_search" />

        <androidx.cardview.widget.CardView
            android:id="@+id/noInternetCard"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_default"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/main_page_navigation_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/radius_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/noInternetIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/margin_big"
                    app:srcCompat="@drawable/no_internet" />

                <TextView
                    android:id="@+id/cardName"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_big"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/noInternetIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/CardNameText"
                    android:text="@string/no_internet_connection" />

                <ImageButton
                    android:id="@+id/reloadBtn"
                    android:background="@android:color/transparent"
                    android:layout_width="50dp"
                    app:layout_constraintTop_toBottomOf="@id/cardName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/noInternetIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="50dp"
                    android:src="@drawable/reload"
                    tools:layout_editor_absoluteX="236dp"
                    tools:layout_editor_absoluteY="88dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_margin="@dimen/margin_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>